--- a/programa golomax/index.html
+++ b/programa golomax/index.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>login GOLOMAX</title>
-    <link rel="stylesheet" href="./css/login.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./css/login.css" />
+  </head>
+  <body>
     <h1>bienvenido a golomax</h1>
     <section class="form-login">
-    <h3>ingrese sus datos</h3>
-    <input class="controls" type="text" name="usuario" value="" placeholder="usuario">
-    <input class="controls" type="password" name="contraseña" value="" placeholder="contraseña">
-    <input class="controls" type="text" name="nombre" value="" placeholder="nombre">
-    <input class="controls" type="text" name="apellido" value="" placeholder="apellido">
- <a href="productos.html">   <input  class="buttons"   type="button" name="" value="ingresar" ></a>
-</section>
+      <h3>ingrese sus datos</h3>
+      <input
+        class="controls"
+        type="text"
+        name="usuario"
+        value=""
+        placeholder="usuario"
+      />
+      <input
+        class="controls"
+        type="password"
+        name="contraseña"
+        value=""
+        placeholder="contraseña"
+      />
 
-
-
-    <script src="./login.js"> </script>
-</body>
-</html> 
+      <a href="">
+        <input class="buttons" type="button" name="" value="ingresar"
+      /></a>
+    </section>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="./login.js"></script>
+  </body>
+</html>
