--- a/programa golomax/index.html
+++ b/programa golomax/index.html
@@ -26,7 +26,7 @@
         placeholder="contraseña"
       />
 
-      <a href="">
+      <a href="/programa golomax/productos.html">
         <input class="buttons" type="button" name="" value="ingresar"
       /></a>
     </section>
