--- a/programa golomax/productos.html
+++ b/programa golomax/productos.html
@@ -67,6 +67,19 @@
         </li>
         <li class="nav-item" role="presentation">
           <a
+            class="nav-link papas fritas"
+            id="pills-papasfritas-tab"
+            data-bs-toggle="pill"
+            data-bs-target="#pills-papasfritas"
+            type="button"
+            role="tab"
+            aria-controls="pills-papasfritas"
+            aria-selected="false"
+            >Papas fritas</a
+          >
+        </li>
+        <li class="nav-item" role="presentation">
+          <a
             class="nav-link"
             id="pills-contact-tab"
             data-bs-toggle="pill"
@@ -112,29 +125,7 @@
         role="tabpanel"
         aria-labelledby="pills-profile-tab"
       >
-    <!-- ejemplo after class-->  
-<form class="formcaja">
-  <input type="text" placeholder="busca por ID" id="busquedaid">
-  <input type="text" placeholder="busca por nombre" id="busquedanombre">
-  <button>buscar</button>
-</form>
-
-<div class="caja"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- ejemplo after class-->
+  
         <h2 class="h4 m-4 text-primary">Productos</h2>
 
         <div
@@ -422,6 +413,89 @@ conogol helado              </h5>
 <!--aca termina la seccion pizza -->
 
 
+<!--aca empieza la seccion papas fritas-->
+<div
+class="tab-pane fade carrito"
+id="pills-papasfritas"
+role="tabpanel"
+aria-labelledby="pills-papasfritas-tab"
+>
+<div class="col d-flex justify-content-center mb-4">
+<div class="card shadow mb-1 bg-dark rounded" style="width: 20rem">
+  <h5 class="titulo card-title pt-2 text-center text-primary">
+    conos de papas
+  </h5>
+  <img src="./img/cono de papas.jpg" class="card-img-top" alt="..." />
+  <div class="card-body">
+    <p class="card-text text-white-50 description">
+  cono de papas simples
+    </p>
+    <h5 class="text-primary">
+      Precio: <span class="precio">$150</span>
+    </h5>
+    <div class="d-grid gap-2">
+      <button class="btn btn-primary button">
+        Añadir a Carrito <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+          <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+          <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+        </svg>
+      </button>
+    </div>
+  </div>
+</div>
+</div>
+<div class="col d-flex justify-content-center mb-4">
+<div class="card shadow mb-1 bg-dark rounded" style="width: 20rem">
+  <h5 class="titulo card-title pt-2 text-center text-primary">
+    bandeja de papas simples
+  </h5>
+  <img src="./img/bandeja de papas.jpg" class="card-img-top" alt="..." />
+  <div class="card-body">
+    <p class="card-text text-white-50 description">
+     bandeja de papas simples
+    </p>
+    <h5 class="text-primary">
+      Precio: <span class="precio">$ 600</span>
+    </h5>
+    <div class="d-grid gap-2">
+      <button class="btn btn-primary button">
+        Añadir a Carrito <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+          <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+          <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+        </svg>
+      </button>
+    </div>
+  </div>
+</div>
+</div>
+<div class="col d-flex justify-content-center mb-4">
+<div class="card shadow mb-1 bg-dark rounded" style="width: 20rem">
+  <h5 class="titulo card-title pt-2 text-center text-primary">
+    bandeja de papas con cheddar
+  </h5>
+  <img src="./img/papas con cheddar y bacon.jpg" class="card-img-top" alt="..." />
+  <div class="card-body">
+    <p class="card-text text-white-50 description">
+ papas con cheddar y bacon 
+    </p>
+    <h5 class="text-primary">
+      Precio: <span class="precio">$ 450</span>
+    </h5>
+    <div class="d-grid gap-2">
+      <button class="btn btn-primary button">
+        Añadir a Carrito <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+          <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+          <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+        </svg>
+      </button>
+      
+    </div>
+  </div>
+</div>
+</div>
+  </div>
+<!--aca termina la seccion papas fritas-->
+
 <!--aca empiesa la seccion carrito-->
       <div
         class="tab-pane fade carrito"
@@ -463,12 +537,15 @@ conogol helado              </h5>
       </p>
    </footer>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+ 
+
     
     <script
       src="https://code.jquery.com/jquery-3.5.1.js"
       integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
       crossorigin="anonymous"
     ></script>
+
     <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
