--- a/programa golomax/productos.html
+++ b/programa golomax/productos.html
@@ -44,7 +44,7 @@
             class="nav-link "
             id="pills-bebidas-tab"
             data-bs-toggle="pill"
-            data-bs-target="#pills-home"
+            data-bs-target="#pills-bebidas"
             type="button"
             role="tab"
             aria-controls="pills-bebidas"
@@ -215,7 +215,7 @@
                  doble medallon de carne , lechuga , tomate , panceta , cheddar 
                 </p>
                 <h5 class="text-primary">
-                  Precio: <span class="precio">$ 5</span>
+                  Precio: <span class="precio">$ 320</span>
                 </h5>
                 <div class="d-grid gap-2">
                   <button class="btn btn-primary button">
@@ -238,7 +238,7 @@ conogol helado              </h5>
                 CLASICO HELADO CONOGOL
                 </p>
                 <h5 class="text-primary">
-                  Precio: <span class="precio">$ 5</span>
+                  Precio: <span class="precio">$ 190</span>
                 </h5>
                 <div class="d-grid gap-2">
                   <button class="btn btn-primary button">
@@ -303,16 +303,14 @@ conogol helado              </h5>
           <div class="col d-flex justify-content-center mb-4">
             <div class="card shadow mb-1 bg-dark rounded" style="width: 20rem">
               <h5 class="titulo card-title pt-2 text-center text-primary">
-                Card title 8
-              </h5>
+hamburguesa con papas              </h5>
               <img src="./img/platillo3.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
                 <p class="card-text text-white-50 description">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                hamburguesa completa con bandeja de papas
                 </p>
                 <h5 class="text-primary">
-                  Precio: <span class="precio">$ 250</span>
+                  Precio: <span class="precio">$ 700</span>
                 </h5>
                 <div class="d-grid gap-2">
                   <button class="btn btn-primary button">
@@ -328,6 +326,165 @@ conogol helado              </h5>
         </div>
       </div>
       <!-- aca empiesa la seccion pizza-->
+      <!--aca empieza la seccion bebidas-->
+      <div
+      class="tab-pane fade carrito"
+      id="pills-bebidas"
+      role="tabpanel"
+      aria-labelledby="pills-bebidas-tab"
+      >
+
+      <div class="col d-flex justify-content-center mb-4">
+        <div class="card shadow mb-1 bg-dark rounded" style="width: 20rem">
+          <h5 class="titulo card-title pt-2 text-center text-primary">
+            coca cola 2.25
+          </h5>
+          <img src="./img/coca-cola-225L-almacen-gaseosas-casa-segal-mendoza-600x600.jpg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <p class="card-text text-white-50 description">
+      coca cola grande de 2.25 lts 
+            </p>
+            <h5 class="text-primary">
+              Precio: <span class="precio">$ 280</span>
+            </h5>
+            <div class="d-grid gap-2">
+              <button class="btn btn-primary button">
+                Añadir a Carrito <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+                  <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                  <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                </svg>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col d-flex justify-content-center mb-4">
+        <div class="card shadow mb-1 bg-dark rounded" style="width: 20rem">
+          <h5 class="titulo card-title pt-2 text-center text-primary">
+            fanta 2.25 lts
+          </h5>
+          <img src="./img/fanta 2.25.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <p class="card-text text-white-50 description">
+  fanta grande de 2.25 lts 
+            </p>
+            <h5 class="text-primary">
+              Precio: <span class="precio">$ 280</span>
+            </h5>
+            <div class="d-grid gap-2">
+              <button class="btn btn-primary button">
+                Añadir a Carrito <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+                  <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                  <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                </svg>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col d-flex justify-content-center mb-4">
+        <div class="card shadow mb-1 bg-dark rounded" style="width: 20rem">
+          <h5 class="titulo card-title pt-2 text-center text-primary">
+            pepsi 
+          </h5>
+          <img src="./img/pepsi 2.25.jpg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <p class="card-text text-white-50 description">
+      pepsi grande tamaño 2.25 lts
+            </p>
+            <h5 class="text-primary">
+              Precio: <span class="precio">$ 280</span>
+            </h5>
+            <div class="d-grid gap-2">
+              <button class="btn btn-primary button">
+                Añadir a Carrito <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+                  <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                  <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                </svg>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col d-flex justify-content-center mb-4">
+        <div class="card shadow mb-1 bg-dark rounded" style="width: 20rem">
+          <h5 class="titulo card-title pt-2 text-center text-primary">
+            seven up 
+          </h5>
+          <img src="./img/seven up 2.25.jpg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <p class="card-text text-white-50 description">
+      seven up grande de 2.25 lts 
+            </p>
+            <h5 class="text-primary">
+              Precio: <span class="precio">$ 280</span>
+            </h5>
+            <div class="d-grid gap-2">
+              <button class="btn btn-primary button">
+                Añadir a Carrito <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+                  <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                  <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                </svg>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col d-flex justify-content-center mb-4">
+        <div class="card shadow mb-1 bg-dark rounded" style="width: 20rem">
+          <h5 class="titulo card-title pt-2 text-center text-primary">
+            fernet branca
+          </h5>
+          <img src="./img/fernet-branca-1l-1075652-s163.jpg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <p class="card-text text-white-50 description">
+      fernet branca de 1 litro 
+            </p>
+            <h5 class="text-primary">
+              Precio: <span class="precio">$1200</span>
+            </h5>
+            <div class="d-grid gap-2">
+              <button class="btn btn-primary button">
+                Añadir a Carrito <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+                  <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                  <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                </svg>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col d-flex justify-content-center mb-4">
+        <div class="card shadow mb-1 bg-dark rounded" style="width: 20rem">
+          <h5 class="titulo card-title pt-2 text-center text-primary">
+            champagne chandon 
+          </h5>
+          <img src="./img/chandon.jpg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <p class="card-text text-white-50 description">
+      chandon 
+            </p>
+            <h5 class="text-primary">
+              Precio: <span class="precio">$ 1000</span>
+            </h5>
+            <div class="d-grid gap-2">
+              <button class="btn btn-primary button">
+                Añadir a Carrito <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+                  <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                  <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                </svg>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+      </div>
+<!--aca termina la seccion bebidas-->
+
+
       <div
       class="tab-pane fade carrito"
       id="pills-producto"
@@ -553,5 +710,6 @@ aria-labelledby="pills-papasfritas-tab"
       crossorigin="anonymous"
     ></script>
     <script src="./js/scripts.js"></script>
+    <script src="./scripts2.js"></script>
   </body>
 </html>
